[Layout]: Added Smooth Scrolling when clicked in About us

--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -16,15 +16,15 @@
 
       <div class="collapse navbar-collapse home-menu" id="myNavbar">
         <ul class="nav navbar-nav my-nav-bar">
-          <li><%= link_to "INFLUENCERS", home_public_index_path, class: current_path(home_public_index_path) %></li>
-          <li><%= link_to "BRANDS", brand_home_public_index_path, class: current_path(brand_home_public_index_path) %></li>
-          <li><a href="#">ABOUT US</a></li>
+          <li><%= link_to 'INFLUENCERS', home_public_index_path, class: current_path(home_public_index_path) %></li>
+          <li><%= link_to 'BRANDS', brand_home_public_index_path, class: current_path(brand_home_public_index_path) %></li>
+          <li><a href="#about_us">ABOUT US</a></li>
           <% if user_signed_in? %>
               <li><a href="<%= profile_profile_index_path %>">PROFILE</a></li>
               <li><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
           <% else %>
               <li><a href="<%= new_user_session_path %>">LOGIN</a></li>
-              <li><%= link_to "SIGN UP FREE", "#loginModal", "data-toggle" => "modal", :class => "btn-custom btn-theme text-white" %></li>
+              <li><%= link_to 'SIGN UP FREE', '#loginModal', "data-toggle" => "modal", :class => "btn-custom btn-theme text-white" %></li>
           <% end %>
         </ul>
       </div>
@@ -70,7 +70,7 @@
   </div>
 </div>
 
-<div class="about-us">
+<div class="about-us" id="about_us">
   <div class="wrapper-content">
     <div class="text-top">
       About Us
@@ -194,6 +194,13 @@
 <script>
     $(document).ready(function () {
         $('[data-toggle="popover"]').popover({trigger: 'hover', placement: "auto bottom"});
+
+        $('a').click(function(){
+            $('html, body').animate({
+                scrollTop: $( $.attr(this, 'href') ).offset().top
+            }, 1000);
+            return false;
+        });
     });
 
 
