use dropdown to select facebook account for insights overview

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -569,6 +569,10 @@ only screen and (max-width: 460px) {
     font-weight: 600;
 }
 
+.campaign-view {
+    margin-bottom: 20px;
+}
+
 .campaign-view label {
     padding-left: 50px;
     padding-right: 20px;
