facebook insights page title

--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -1,3 +1,5 @@
+<% title 'Facebook Insights' %>
+
 <% content_for :head do %>
     <%= stylesheet_link_tag  'ammap/ammap', media: 'all' %>
     <%= javascript_include_tag 'ammap/ammap' %>
