--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -166,7 +166,7 @@
               <span class="square-box bg-color-blue chart-male"></span>
               Male
             </div>
-            <div class="gender-stat-legend">
+            <!--<div class="gender-stat-legend">
               <div class="dropdown">
                 <button class="btn btn-primary dropdown-toggle custom-drop-down-button" type="button" data-toggle="dropdown">This Week
                   <i class="fa fa-angle-down"></i>
@@ -175,7 +175,7 @@
                   <li><a href="#">This Month</a></li>
                 </ul>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </section>
