- solve issue profile complete for brand

--- a/app/views/offers/_influencer_offer_view.erb
+++ b/app/views/offers/_influencer_offer_view.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div class="select-offer">
-    <input type="checkbox"  value="1" class="select-offer" data-id="<%=offer.id %>"/>
+    <input type="checkbox"  value="1" class="squaredFour select-offer" data-id="<%=offer.id %>"/>
   </div>
 
   <div class="make-star">
