--- a/app/views/offers/_influencer_offer_view.erb
+++ b/app/views/offers/_influencer_offer_view.erb
@@ -29,7 +29,7 @@
         &nbsp;
         <%= link_to 'Deny', deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny', method: :put, remote: true %>
     <% elsif offer.denied? && offer.deny_undo_able? %>
-        <%= link_to 'Undo Deny', undo_deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny', method: :put, remote: true %>
+        <%= link_to 'Undo Deny', undo_deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'undo-deny', method: :put, remote: true %>
     <% end %>
   </div>
 
