--- a/app/views/offers/undo_deny.js.erb
+++ b/app/views/offers/undo_deny.js.erb
@@ -1,1 +1,3 @@
-window.location.reload();
+$('.offer-box-<%= @offer.id %>').find('.undo-deny').addClass('hidden');
+$('.offer-box-<%= @offer.id  %>').find('.deny').removeClass('hidden');
+$('.offer-box-<%= @offer.id  %>').find('.btn-accept').removeClass('hidden');
