--- a/app/views/offers/_influencer_offer_view.erb
+++ b/app/views/offers/_influencer_offer_view.erb
@@ -28,9 +28,14 @@
         <%= link_to 'Accept', accept_offer_path(offer, authenticity_token: form_authenticity_token), class: 'btn btn-accept', method: :put, remote: true %>
         &nbsp;
         <%= link_to 'Deny', deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny', method: :put, remote: true %>
-    <% elsif offer.denied? && offer.deny_undo_able? %>
+        <%= link_to 'Undo Deny', undo_deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'undo-deny hidden', method: :put, remote: true %>
+  <% elsif offer.denied? && offer.deny_undo_able? %>
+        <%= link_to 'Accept', accept_offer_path(offer, authenticity_token: form_authenticity_token), class: 'btn btn-accept hidden', method: :put, remote: true %>
+        <%= link_to 'Deny', deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny hidden', method: :put, remote: true %>
         <%= link_to 'Undo Deny', undo_deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'undo-deny', method: :put, remote: true %>
-    <% end %>
+  <% else %>
+    <span class="text-success">Accepted Campaign</span>
+  <% end %>
   </div>
 
   <div class="offer-time">
