--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -4,7 +4,7 @@
 
 <div class="payment-div ">
   <div class="payment-button-set pull-right">
-    <%= link_to 'EXPORT', '', remote: true, :class => 'btn btn-export', id: 'export_campaigns' %>
+    <%= link_to 'EXPORT', export_campaigns_campaigns_path(format: :csv), method: :post, :class => 'btn btn-export', id: 'export_campaigns' %>
 
     <div class="dropdown" id="age_button">
       <button class="btn btn-age dropdown-toggle" type="button" data-toggle="dropdown">Age
@@ -163,11 +163,12 @@
             $('.squaredFour input:checked').each(function() {
                 campaign_ids.push($(this).data('id'));
             });
+            console.log(campaign_ids);
 
             $.ajax({
                 url: "<%= export_campaigns_campaigns_path %>",
                 type: 'post',
-                dataType: 'script',
+                dataType: 'text',
                 data: {
                     campaign_ids: campaign_ids
                 }
