--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -54,7 +54,7 @@
             <tbody>
             <% @campaigns.each do |campaign| %>
                 <tr>
-                  <td class="squaredFour"><input type="checkbox" data-id="<%= campaign.id %>" value="1"/></td>
+                  <td class="squaredFour"><input type="checkbox" class="PerformanceCheckBox" data-id="<%= campaign.id %>" value="1"/></td>
                   <td>
                     <div class="switch">
                       <input id="performance_switch_<%= campaign.id %>" data-id="<%= campaign.id %>" class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %> >
@@ -92,7 +92,7 @@
             <tbody>
             <% @campaigns.each do |campaign| %>
                 <tr>
-                  <td class="squaredFour"><input type="checkbox" data-id="<%= campaign.id %>" value="1"/></td>
+                  <td class="squaredFour"><input type="checkbox" class="EngagementCheckBox" data-id="<%= campaign.id %>" value="1"/></td>
                   <td>
                     <div class="switch">
                       <input id="engagement_switch_<%= campaign.id %>" data-id="<%= campaign.id %>"  class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %>>
@@ -158,24 +158,22 @@
 
         });
 
+        $("#select_all_performance").change(function () {
+               $(".PerformanceCheckBox").prop('checked', $("#select_all_performance input:checked").length);
+        });
+
+        $("#selecct_all_engagement").change(function () {
+            $(".EngagementCheckBox").prop('checked', $("#selecct_all_engagement input:checked").length);
+        });
+
         $('#export_campaigns').click(function() {
             var campaign_ids = [];
             $('.squaredFour input:checked').each(function() {
                 campaign_ids.push($(this).data('id'));
             });
-            console.log(campaign_ids);
+//            console.log(campaign_ids);
 
             window.location.href  = "<%= export_campaigns_campaigns_path(format: :csv) %>?campaign_ids=" + campaign_ids;
-
-//            $.ajax({
-//                url: "<%#= export_campaigns_campaigns_path(format: :csv) %>",
-//                type: 'post',
-//                dataType: 'csv',
-//                data: {
-//                    campaign_ids: campaign_ids
-//                }
-//            });
-
 
         });
     });
