--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -59,14 +59,14 @@
 
                 <%= f.label :post_type, 'Choose the type of post', class: 'control-label col-md-4' %>
                 <div class="col-sm-8">
-                  <%= f.select :post_type, options_for_select(Campaign.post_types.map{ |type, value| [type.titleize, value] }, Campaign.post_types[@campaign.post_type]), { include_blank: true }, { :class => 'form-control type-of-post', :id => 'post_type' } %>
+                  <%= f.select :post_type, options_for_select(Campaign.post_types.map{ |type, value| [type.titleize, value] }, Campaign.post_types[@campaign.post_type]), {}, { :class => 'form-control type-of-post', :id => 'post_type' } %>
                 </div>
               </div>
 
               <div class="form-group">
                 <%= f.label :cost, "Cost", class: 'control-label col-md-4' %>
                 <div class="col-md-8">
-                  <%= f.text_field :cost, { class: 'form-control campaign-cost-input', readonly: true, id: 'post_cost' } %>
+                  <%= f.text_field :cost, { class: 'form-control campaign-cost-input', value: @campaign.cost.present? ? @campaign.cost : '', readonly: true, id: 'post_cost' } %>
                 </div>
               </div>
 
@@ -165,13 +165,13 @@
             $('#start_end').find('*').attr('disabled', false);
         });
 
-        var social_account_index = 0 ;
+        var social_account_index = $('#social_account').find('option:selected').index();
         var costs = <%= @costs %>;
 
         $('#social_account').change(function() {
             social_account_index = $('#social_account').find('option:selected').index();
             $('#post_type option:first').attr("selected", true);
-            $('#post_cost').val(0);
+            $('#post_cost').val(costs[social_account_index][0]);
         });
 
         $('#post_type').change(function() {
@@ -186,10 +186,9 @@
                 else if (this.value == 2) {
                     $('#post_cost').val(costs[social_account_index][2]);
                 }
-                else {
+                else if (this.value == 3) {
                     $('#post_cost').val(costs[social_account_index][3]);
                 }
-
             }
 
         });
