--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -28,7 +28,7 @@
           <%= f.text_field :company_name %>
         </div>
         <div class="col-md-6">
-          <%= f.label :company_email, "Company Email" %>
+          <%= f.label :company_email, current_user.brand? ? 'Company Email' : 'Email' %>
           <%= f.email_field :company_email %>
         </div>
       </div>
