[Campaign]: Influencers campaign pages Switch button removed

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -21,7 +21,7 @@
 }
 
 .performance_table thead tr th:nth-child(2), .engagement_table thead tr th:nth-child(2) {
-    width: 85px;
+    /*width: 85px;*/
 }
 
 .brand_campaign_engagement_table thead tr th:nth-child(2), .brand_campaign_performance_table thead tr th:nth-child(2) {
