--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -41,7 +41,6 @@
         <thead>
         <tr class="payment-header">
           <th class="squaredFour" id="select_all_performance"><input type="checkbox" class="payment-header" value="all"/></th>
-          <th></th>
           <th>Campaign Name</th>
           <th>Post Likes</th>
           <th>Reach</th>
@@ -55,12 +54,12 @@
             <% @campaigns.each do |campaign| %>
                 <tr>
                   <td class="squaredFour"><input type="checkbox" class="PerformanceCheckBox" data-id="<%= campaign.id %>" value="1"/></td>
-                  <td>
-                    <div class="switch">
-                      <input id="performance_switch_<%= campaign.id %>" data-id="<%= campaign.id %>" class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %> >
-                      <label for="performance_switch_<%= campaign.id %>"></label>
-                    </div>
-                  </td>
+                  <!--<td>-->
+                    <!--<div class="switch">-->
+                      <!--<input id="performance_switch_<%= campaign.id %>" data-id="<%= campaign.id %>" class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %> >-->
+                      <!--<label for="performance_switch_<%= campaign.id %>"></label>-->
+                    <!--</div>-->
+                  <!--</td>-->
                   <td><%= image_tag(campaign.sender.profile_picture , :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %></td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_post_reach %></td>
@@ -80,7 +79,6 @@
         <thead>
         <tr class="payment-header">
           <th class="squaredFour" id="selecct_all_engagement"><input type="checkbox" class="payment-header" value="all"/></th>
-          <th></th>
           <th>Campaign Name</th>
           <th>Likes</th>
           <th>Comments</th>
@@ -93,12 +91,12 @@
             <% @campaigns.each do |campaign| %>
                 <tr>
                   <td class="squaredFour"><input type="checkbox" class="EngagementCheckBox" data-id="<%= campaign.id %>" value="1"/></td>
-                  <td>
-                    <div class="switch">
-                      <input id="engagement_switch_<%= campaign.id %>" data-id="<%= campaign.id %>"  class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %>>
-                      <label for="engagement_switch_<%= campaign.id %>"></label>
-                    </div>
-                  </td>
+                  <!--<td>-->
+                    <!--<div class="switch">-->
+                      <!--<input id="engagement_switch_<%= campaign.id %>" data-id="<%= campaign.id %>"  class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %>>-->
+                      <!--<label for="engagement_switch_<%= campaign.id %>"></label>-->
+                    <!--</div>-->
+                  <!--</td>-->
                   <td><%= image_tag(campaign.sender.profile_picture , :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %></td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_comments %></td>
@@ -142,21 +140,21 @@
             document.getElementById("engagement-black").style.display = 'inline';
         });
 
-        $('.cmn-toggle').click(function() {
-            var id = $(this).data('id');
-            var campaign_active_status = this.checked;
-
-            $.ajax({
-                url: "<%= campaign_status_change_campaigns_path %>",
-                type: 'post',
-                dataType: 'script',
-                data: {
-                    id: id,
-                    campaign_active: campaign_active_status
-                }
-            });
-
-        });
+//        $('.cmn-toggle').click(function() {
+//            var id = $(this).data('id');
+//            var campaign_active_status = this.checked;
+//
+//            $.ajax({
+//                url: "<%#= campaign_status_change_campaigns_path %>",
+//                type: 'post',
+//                dataType: 'script',
+//                data: {
+//                    id: id,
+//                    campaign_active: campaign_active_status
+//                }
+//            });
+//
+//        });
 
         $("#select_all_performance").change(function () {
                $(".PerformanceCheckBox").prop('checked', $("#select_all_performance input:checked").length);
