--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -152,7 +152,10 @@
 }
 
 
-th:nth-child(1), td:nth-child(1) {
+.performance_table th:nth-child(1),
+.performance_table td:nth-child(1)
+.engagement_table th:nth-child(1),
+.engagement_table td:nth-child(1) {
     text-align: center ;
 }
 
