[Contact Us]: 1. Contact Us table and model Added 2. Contact Us Message and category saved in database.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,7 +102,7 @@
       <br/>
 
       <ul class="sidebar-menu">
-        <li class="<%=  (params[:controller] == 'profile') ? 'active' : '' %>">
+        <li class="<%= ((params[:controller] == 'profile' && params[:action] == 'update') || (params[:controller] == 'profile' && params[:action] == 'profile')) ? 'active' : '' %>">
           <a href="<%= profile_profile_index_path %>">
             <i class="fa fa-user"></i> <span class="space-sidebar">PROFILE</span>
           </a>
