--- a/app/views/offers/_brand_offer_veiw.erb
+++ b/app/views/offers/_brand_offer_veiw.erb
@@ -24,7 +24,7 @@
 
   <div class="action">
     <% if offer.accepted? %>
-        <%= link_to 'Engage', '#', class: 'btn btn-accept', method: :put, remote: true %>
+        <%= link_to 'Engage', new_brand_payment_campaigns_path(offer.id), class: 'btn btn-accept', method: :post %>
   <% else  %>
        Pending request
   <% end %>
