- complete payment transaction show pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -129,7 +129,7 @@
             </li>
 
             <li  class="<%=  (params[:controller] == 'brand_payments') ? 'active' : '' %>">
-              <a href="<%= brand_payment_brand_payments_path %>">
+              <a href="<%= brand_payments_path %>">
                 <i class="fa fa-dollar"></i><span class="space-sidebar">PAYMENTS</span>
               </a>
             </li>
