--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -8,6 +8,20 @@
 
       <%= render 'shared/show_errors', :object => @campaign%>
 
+      <% if @campaign.errors.any? %>
+          <div id="error_explanation">
+            <h2>
+              <%= pluralize(@campaign.errors.count, "error") %> prohibited
+              this article from being saved:
+            </h2>
+            <ul>
+              <% @campaign.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
+      <% end %>
+
       <div class="text-pink">PAYMENT</div>
 
       <div class="payment-form">
