--- a/app/views/brand_payments/index.html.erb
+++ b/app/views/brand_payments/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="payment-div ">
   <div class="payment-button-set">
-    <%= link_to 'DOWNLOAD INVOICE', '', :class => 'btn btn-download', id: 'export_payments' %>
+    <%= link_to 'DOWNLOAD INVOICE', '#', :class => 'btn btn-download', id: 'export_payments' %>
   </div>
 </div>
 
@@ -74,14 +74,7 @@
                 payment_ids.push($(this).data('id'));
             });
 
-            $.ajax({
-                url: "<%= export_payments_brand_payments_path %>",
-                type: 'post',
-                dataType: 'script',
-                data: {
-                    payment_ids: payment_ids
-                }
-            });
+            window.location.href  = "<%= export_brand_payments_brand_payments_path(format: :csv) %>?payment_ids=" + payment_ids;
 
         });
 
