-  solve route issues between band and influence payment class
-- DONOT USE  SAME NAME FOR MORE THEN ONE CLASS PATH

--- a/app/views/influencer_payments/index.html.erb
+++ b/app/views/influencer_payments/index.html.erb
@@ -114,7 +114,7 @@
             });
 
             $.ajax({
-                url: "<%= export_payments_brand_payments_path %>",
+                url: "",
                 type: 'post',
                 dataType: 'script',
                 data: {
