--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,5 +1,7 @@
 <%= stylesheet_link_tag 'offers.css', media: 'all' %>
 
+<% title 'Influencer Offers' %>
+
 <p id="notice"><%= notice %></p>
 
 <div class="header-bottom-margin"></div>
