--- a/app/views/influencer_payments/index.html.erb
+++ b/app/views/influencer_payments/index.html.erb
@@ -55,12 +55,12 @@
     <div class="panel-payment">
       <div id="payment" class="tab-pane fade in active">
         <%= image_tag('Transactions.png', :class => 'transaction-table') %> &nbsp; Transactions
-        <%= link_to 'DOWNLOAD INVOICE', '', :class => 'btn btn-influencer-download pull-right', id: 'export_payments' %>
+        <%= link_to 'DOWNLOAD INVOICE', '#', :class => 'btn btn-influencer-download pull-right', id: 'export_payments' %>
 
         <table class="table table-striped table-bordered table-responsive payments_table">
           <thead>
           <tr class="payment-header">
-            <th class="squaredFour" id="selecctall"><input type="checkbox" class="payment-header" value="all"/></th>
+            <th class="squaredFour" id="select_all_influencer_payment"><input type="checkbox" class="payment-header" value="all"/></th>
             <th>Date Billed</th>
             <th>Transaction ID</th>
             <th>Amount Recieved (INR)</th>
@@ -72,7 +72,7 @@
               <tbody>
               <% @transactions.each do |transaction| %>
                   <tr>
-                    <td class="squaredFour"><input type="checkbox" data-id="<%= transaction.id %>" value="1"/></td>
+                    <td class="squaredFour"><input type="checkbox" class="InfluencerPaymentCheckBox" data-id="<%= transaction.id %>" value="1"/></td>
                     <td><%= transaction.billed_date.present? ? transaction.billed_date.strftime("%B %d, %Y") : 'NA' %></td>
                     <td><%= sprintf("BP%05d", transaction.id) %></td>
                     <td><%= transaction.amount_billed %></td>
@@ -107,20 +107,17 @@
 <script type="text/javascript">
     $(document).ready(function () {
 
+        $("#select_all_influencer_payment").change(function () {
+            $(".InfluencerPaymentCheckBox").prop('checked', $("#select_all_influencer_payment input:checked").length);
+        });
+
         $('#export_payments').click(function () {
             var payment_ids = [];
             $('.squaredFour input:checked').each(function () {
                 payment_ids.push($(this).data('id'));
             });
 
-            $.ajax({
-                url: "",
-                type: 'post',
-                dataType: 'script',
-                data: {
-                    payment_ids: payment_ids
-                }
-            });
+            window.location.href  = "<%= export_influencer_payments_influencer_payments_path(format: :csv) %>?payment_ids=" + payment_ids;
 
         });
 
