--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -37,6 +37,7 @@
   </ul>
   <div class="tab-content panel panel-campaigns">
     <div id="performance" class="tab-pane fade in active">
+      <%= render partial: 'add_social_activity_modal' %>
       <table class="table table-striped table-bordered table-responsive performance_table">
         <thead>
         <tr class="payment-header">
@@ -54,13 +55,13 @@
             <% @campaigns.each do |campaign| %>
                 <tr>
                   <td class="squaredFour"><input type="checkbox" class="PerformanceCheckBox" data-id="<%= campaign.id %>" value="1"/></td>
-                  <!--<td>-->
-                    <!--<div class="switch">-->
-                      <!--<input id="performance_switch_<%= campaign.id %>" data-id="<%= campaign.id %>" class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %> >-->
-                      <!--<label for="performance_switch_<%= campaign.id %>"></label>-->
-                    <!--</div>-->
-                  <!--</td>-->
-                  <td><%= image_tag(campaign.sender.profile_picture , :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %></td>
+                  <td>
+                    <%= image_tag(campaign.sender.profile_picture , :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %>
+                    <% if campaign.social_account_activity_id.blank? %>
+                        <br/>
+                        <%= link_to 'Set facebook activity', 'javascript:', :class => 'btn', data: { campaign: campaign.id, page: campaign.facebook_account.account_id, target: 'SetFacebookActivity' } %>
+                    <% end %>
+                  </td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_post_reach %></td>
                   <td><%= campaign.start_date.present? ? campaign.start_date.strftime("%B %d, %Y") : 'NA' %></td>
