--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -368,15 +368,16 @@ only screen and (max-width: 460px) {
         padding-left: 0px;
     }
 
-    .performance_table > tbody > tr > td:nth-of-type(3):before { content: "Campaign Name : "; font-weight: bold; }
-    .performance_table > tbody > tr > td:nth-of-type(4):before { content: "Post Likes : ";  font-weight: bold; }
-    .performance_table > tbody > tr > td:nth-of-type(5):before { content: "Reach : ";  font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(3):before { content: "Post Likes : ";  font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(4):before { content: "Reach : ";  font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(5):before { content: "Starts: ";  font-weight: bold; }
     .performance_table > tbody > tr > td:nth-of-type(6):before { content: "Ends: ";  font-weight: bold; }
 
-    .engagement_table > tbody > tr > td:nth-of-type(3):before { content: "Campaign Name : "; font-weight: bold; }
-    .engagement_table > tbody > tr > td:nth-of-type(4):before { content: "Likes : ";  font-weight: bold; }
-    .engagement_table > tbody > tr > td:nth-of-type(5):before { content: "Comments : ";  font-weight: bold; }
-    .engagement_table > tbody > tr > td:nth-of-type(6):before { content: "Shares: ";  font-weight: bold; }
+    .engagement_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
+    .engagement_table > tbody > tr > td:nth-of-type(3):before { content: "Likes : ";  font-weight: bold; }
+    .engagement_table > tbody > tr > td:nth-of-type(4):before { content: "Comments : ";  font-weight: bold; }
+    .engagement_table > tbody > tr > td:nth-of-type(5):before { content: "Shares: ";  font-weight: bold; }
 }
 
 .campaign-content {
